[gd_scene load_steps=8 format=3 uid="uid://level_selector_scene"]

[ext_resource type="Script" path="res://scripts/LevelSelector.gd" id="1_selector"]
[ext_resource type="Environment" path="res://environments/GalaxyEnvironment.tres" id="2_galaxy"]
[ext_resource type="PackedScene" path="res://scenes/Starfield.tscn" id="3_starfield"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 1, 1, 0.8)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(0, 1, 1, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_level_name"]
font_size = 32
font_color = Color(1, 1, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_description"]
font_size = 18
font_color = Color(0.9, 0.9, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="LabelSettings" id="LabelSettings_stats"]
font_size = 16
font_color = Color(0, 1, 0.5, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0, 0.5, 1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_selector")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("2_galaxy")

[node name="Starfield" parent="." instance=ExtResource("3_starfield")]

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.1, 0.3)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 30.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
text = "STELLAR ODYSSEY - LEVEL SELECT"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 120.0
offset_right = -50.0
offset_bottom = -50.0

[node name="LeftPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="VBox" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LevelsLabel" type="Label" parent="MainContainer/LeftPanel/VBox"]
layout_mode = 2
text = "SELECT LEVEL"
label_settings = SubResource("LabelSettings_level_name")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel/VBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 1

[node name="LevelGrid" type="GridContainer" parent="MainContainer/LeftPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
columns = 3
custom_minimum_size = Vector2(360, 800)

[node name="PreviewPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="VBox" type="VBoxContainer" parent="MainContainer/PreviewPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="LevelNameLabel" type="Label" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2
text = "Asteroid Fields (Level 1)"
label_settings = SubResource("LabelSettings_level_name")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2
text = "Begin your cosmic journey through floating space debris. Master the basics of movement and jumping."
label_settings = SubResource("LabelSettings_description")
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2
text = "Difficulty: ★☆☆☆☆
Platforms: 6
Type: Tutorial"
label_settings = SubResource("LabelSettings_stats")

[node name="VSeparator" type="VSeparator" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="MainContainer/PreviewPanel/VBox"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_font_sizes/font_size = 24
text = "PLAY LEVEL"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_font_sizes/font_size = 18
text = "BACK"
